transfered the helper functions from BSTNode class/file to BST.java. Also finished isValidBST!